# WindowsAutomation-Agent

./: .gitignore  001-basic_notepad.py  CLAUDE.md  MCP_SETUP.md  README.md  cli.py  pyproject.toml
.claude/: settings.local.json
.claude/agents/: action-planner.md  graph-builder.md  langgraph-expert.md  mcp-helper.md  pywinauto-expert.md  test-runner.md  window-inspector.md
.claude/skills/debug-automation/: SKILL.md
.claude/skills/inspect-gui/: SKILL.md
.claude/skills/new-experiment/: SKILL.md
.claude/skills/new-graph/: SKILL.md
.claude/skills/new-tool/: SKILL.md
.claude/skills/review-graph/: SKILL.md
config/: config.py  secret_keys.py
docs/resolved/: 001-initial-setup-fixes.md  002-verifier-loop-and-typing-fix.md
graphs/: __init__.py  automation_graph.py  planner_graph.py
tools/: __init__.py  input_tools.py  inspect_tools.py  window_tools.py
utils/: gui_helpers.py
